authService/auth-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: auth
  template:
    metadata:
      labels:
        env: auth
    spec:
      containers:
      - name: auth-app
        image: energy1971/auth-service:latest
        # auth-service:latest
        ports:
        - name: auth-port
          containerPort: 8000
