authService/myapp-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-service
  labels:
    app: myapp-service
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: myapp
  template:
    metadata:
      labels:
        env: myapp
    spec:
      containers:
      - name: my-app
        image: energy1971/my-app:latest
        ports:
        - name: myapp-port
          containerPort: 8000
