authService/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app.kubernetes.io/part-of: web-service
  annotations:
    prometheus.io/port: "metrics"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  selector:
    env: auth
  ports:
    - name: auth
      protocol: TCP
      port: 8000
      targetPort: auth-port
