authService/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app.kubernetes.io/part-of: web-service
  annotations:
    prometheus.io/port: "metrics"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  selector:
    env: myapp
  ports:
    - name: myapp
      protocol: TCP
      port: 80
      targetPort: myapp-port
